--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-baseurl: '/shopify-paczka-w-punkt/'
+baseurl: "/shopify-paczka-w-punkt/"
 permalink: pretty
-title: 'Shopify Paczka w punkt'
+title: "Shopify Paczka w punkt"
 
 logo:
   mobile: "images/logo/logo-mobile.svg"
