--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -1,16 +1,10 @@
 main:
-  - name: "Services"
-    url: "/services/"
+  - name: "FAQ"
+    url: "/faq/"
     weight: 2
-  - name: "Team"
-    url: "/team/"
-    weight: 3
-  - name: "About"
-    url: "/about/"
-    weight: 4
-  - name: "Contact"
+  - name: "Kontakt"
     url: "/contact/"
-    weight: 5
+    weight: 3
 
 footer:
   - name: "Home"
